ingress-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: cfcr-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echoserver
spec:
  hosts:
  - "*"
  gateways:
  - cfcr-gateway
  http:
  - match:
    - uri:
        prefix: "/"
      port: 80
    route:
    - destination:
        host: echoserver
        port:
          number: 5678
